# learner_tracker

./: .env  .mockend.json  Cargo.toml
client/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client/src/: app.rs  constant.rs  context.rs  elements.rs  error.rs  login.rs  macros.rs  main.rs  menu.rs  models.rs  navbar.rs  pupils.rs  routes.rs  search.rs  utils.rs
client/src/elements/: button.rs  editable_field.rs  icon_button.rs  modal.rs  pupil_tags.rs  tag.rs
client/src/pupils/: create_box.rs  details.rs  filter.rs  input_state.rs  model.rs  pupil.rs  row.rs  table.rs  types.rs
client/src/users/: user.rs
client/static/css/: app.css  index.scss  tailwind.css
docker/: db.yaml
entity/: Cargo.toml
entity/src/: lib.rs  metric.rs  prelude.rs  pupil.rs  record.rs  user.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: tests.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs  metric.rs  pupil.rs  record.rs  user.rs  utils.rs
server/: Cargo.toml
server/src/: app_state.rs  auth.rs  constant.rs  core.rs  error.rs  lib.rs  log.rs  main.rs  record.rs  router.rs  utils.rs
server/src/app/: router.rs  state.rs
server/src/auth/: handlers.rs  token.rs
server/src/core/: constant.rs  error.rs
server/src/handlers/: login.rs  mod.rs  pupils.rs  users.rs
server/src/metric/: handlers.rs  model.rs
server/src/models/: mod.rs  pupil.rs  user.rs
server/src/pupil/: handlers.rs  model.rs
server/src/record/: handlers.rs  model.rs
server/src/user/: handlers.rs  model.rs
server/src/utils/: functions.rs  log.rs
server/tests/: common.rs  data_router.rs  lib.rs  login.rs  pupils.rs  records.rs  users.rs
server/tests/auth/: login.rs
server/tests/data/: mod.rs  pupils.rs  users.rs
shared_utils/: Cargo.toml
shared_utils/src/: lib.rs
