[package]
name = "lt_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo-console = "0.2.3"
gloo-net = { version = "0.2.6", features = ["http"] }
gloo-storage = "0.2.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.3.0", features = ["v4", "serde", "wasm-bindgen", "js"] }
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
base64 = "0.21.0"
console_error_panic_hook = "0.1.7"
