[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
axum-login = { version = "0.4.1", features = ["postgres"] }
sea-orm = { version = "0.11.0", features = ["mock"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = "1.25.0"

[dev-dependencies]
