[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
quote = "1.0.23"
regex = "1.7.1"
syn = "1.0.107"

[dev-dependencies]
axum = "0.6.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
