[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"
test = false

[[bin]]
name = "migration"
test = false

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4"] }
sea-orm-migration = { version = "0.11.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono = { version = "0.4.23", features = ["serde"] }
rand = { version = "0.8.5", features = ["serde"] }
csv = "1.1.6"
entity = { path = "../entity" }
